[tool.poetry]
name = "pysla"
version = "0.1.0"
description = ""
authors = ["Huy Vu Nguyen <huyk25sinh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lunardate = "^0.2.2"
pandas = "^2.1.4"
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
pre-commit = "^3.6.0"

[tool.black]
line-length = 80
target-version = ['py310']
# preferences from https://dev.to/m1yag1/how-to-setup-your-project-with-pre-commit-black-and-flake8-183k
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | blib2to3
    | tests/data
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
