[tool.poetry]
name = "pyshiftsla"
version = "0.1.0"
description = "Highly customizable SLA and work-shifts Generator, for any time-keeping and days-off policies"
authors = ["Huy Vu Nguyen <huyk25sinh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lunardate = "^0.2.2"
pydantic = "^2.5.2"
polars = "^0.20.2"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.6.0"
ruff = "^0.1.8"
coverage = "^7.3.3"
pytest-cov = "^4.1.0"
holidays = "^0.39"
icecream = "^2.1.3"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 80
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E203", "E266", "E501", "F403", "F401", "B905"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
